Fix Workflows hopefully

--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,10 +1,9 @@
-name: Waka Readme
+ame: Waka Readme
 
 on:
   schedule:
-  # Runs at 12am
+    # Runs at 12am IST
     - cron: '0 0 * * *'
-  workflow_dispatch:
 
 jobs:
   update-readme:
@@ -12,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
-      with:
-        WAKATIME_API_KEY: ${{ secerets.WAKATIME_API_KEY }}
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        SHOW_LINES_OF_CODE: "True"
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LINES_OF_CODE: "True"
