--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           USERNAME: ${{ github.repository_owner }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
